added NewgroupContactHandler to initHandlers
