# app/domain/model/group_contact.go
@@ -28,6 +28,18 @@ type GroupContact struct {
 	ContactValue   string `json:"contact_value" validate:"min=2,max=70"`
 }
 
+type GroupContactListDto struct {
+	Metadata      PaginationResponse `json:"_metadata"`
+	GroupContacts []GroupContact
+}
+
+type GroupContactAddDto struct {
+	GroupId       int64  `json:"group_id" validate:"numeric,gt=0"`
+	ContactTypeId int64  `json:"contact_type_id" validate:"numeric,gt=0,lte=7"`
+	IsPrimary     bool   `json:"is_primary" validate:"required"`
+	ContactValue  string `json:"contact_value" validate:"min=2,max=70"`
+}
+
 func (n *GroupContact) ValidateGroupContact() error {
 	validate := validator.New()
 	english := en.New()
